@@ -1,3 +1,8 @@
+2006-05-17  Andy Jackson <andy@grapevinetech.co.uk>
+	
+	* tests/fileio1.c: Compiler warning fixes.
+	* tests/testfs.c:  Compiler warning fixes.
+
 2006-02-16  Peter Korsgaard  <jacmet@sunsite.dk>
 
 	* src/misc.cxx (cyg_mtab_lookup): Corrected implementation for
